# signal-mcp

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.forgejo/workflows/: gitleaks.yml
.githooks/: pre-commit
.github/workflows/: ci.yml
signal-mcp/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  mcp-config.example.json  signal-cli-voice-status.md
signal-mcp/signal_mcp/: __init__.py  server.py
signal-mcp/tests/: test_server.py
signal_mcp/: server.py
tests/: test_server.py
